# PracticalCppMetaprogramming

./: .travis.yml  CMakeLists.txt  README.md
1_Introduction/: CMakeLists.txt  main.cpp
2_CppMetaprogrammingInPractice/: CMakeLists.txt  main.cpp
